Add Font View based on https://github.com/TomMalbran/brackets-fonts-viewer

--- a/src/extensions/bramble-extensions.json
+++ b/src/extensions/bramble-extensions.json
@@ -154,5 +154,13 @@
                 "src/extensions/default/brackets-show-whitespace/styles/main.css"
             ]
         }
+    },
+    {
+        "path": "extensions/extra/brackets-fonts-viewer",
+        "less":{
+            "dist/extensions/extra/brackets-fonts-viewer/styles/main.css": [
+                "src/extensions/extra/brackets-fonts-viewer/styles/main.less"
+            ]
+        }
     }
 ]
